gallery + something else

--- a/index.html
+++ b/index.html
@@ -137,10 +137,37 @@
                 <span class="items__price">$ 100</span>
                 <span class="items__discount"><strike>$ 200</strike></span>
             </div>
+             </section>
+        <section class="ancor">
+                <a href=""><p class="ancor__text">Click here</p></a>
+        </section>
+        <section class="gallery">
+            <img class="gallery__image" src="img/Image1.jpg" alt="">
+            <img class="gallery__image" src="img/Image2.jpg" alt="">
+            <img class="gallery__image" src="img/Image3.jpg" alt="">
+            <img class="gallery__image" src="img/Image4.jpg" alt="">
+            <img class="gallery__image" src="img/Image5.jpg" alt="">
+            <img class="gallery__image" src="img/Image6.jpg" alt="">
+            <img class="gallery__image" src="img/Image7.jpg" alt="">
+            <img class="gallery__image" src="img/Image8.jpg" alt="">
+        </section>
+        <section class="brands">
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-1.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-2.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-7.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-1.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-2.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-9.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-8.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-11.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-10.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-9.jpg" alt=""></a></div>
+            <div class="brands__wrapper"><a href="#"><img class="brands__item" src="img/brand-logo-11.jpg" alt=""></a></div>
         </section>
     </main>
     <footer>
-        
+    123
     </footer>
 </body>
 </html>
