--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="top__menuitem"></div>
             </div>
             <div class="top__logo">PORTIRO</div>
-            <nav class="top__navigation navigation">
+            <nav class="top__navigation">
                 <ul class="navigatioin__menu">
                     <li class="navigation__item navigation__item--first"><a class="navigation__link" href="#">Men</a></li>
                     <li class="navigation__item"><a class="navigation__link" href="#">Women</a></li>
@@ -30,18 +30,20 @@
                 </ul>
             </nav>
             <div class="top__socials">
-                <div class="socials-item"><i class="fab fa-facebook-f"></i></div>
-                <div class="socials-item"><img src="img/tw.jpg" alt=""></div>
-                <div class="socials-item"><img src="img/g+.jpg" alt=""></div>
-                <div class="socials-item"><img src="img/insta.jpg" alt=""></div>
+                <a href="#"><div class="socials-item"><i class="fab fa-facebook-f"></i></div></a>
+                <a href="#"><div class="socials-item"><i class="fab fa-twitter"></i></div></a>
+                <a href="#"><div class="socials-item"><i class="fab fa-google-plus-g"></i></div></a>
+                <a href="#"><div class="socials-item"><i class="fab fa-instagram"></i></div></a>
             </div>
-            <div class="top__cart"><img src="" alt=""></div>
-            <div class="top__search"><img src="" alt=""></div>
+            <div class="top__cart"><i class="fas fa-shopping-bag"></i></div>
+            <div class="top__search"><i class="fas fa-search"></i></div>
         </div>
         <section class="site-top">
+           <div class="site-top__text-wrapper">
             <h1 class="site-top__header">Nike<br>Shoes</h1>
-            <p site-top__underheader>Sign up now and get 50% off</p>
+            <p class="site-top__underheader">Sign up now and get 50% off</p>
             <button class="button button--top">Shop now</button>
+            </div>
         </section>
     </header>
     <main class="main-wrapper">
@@ -76,11 +78,19 @@
             <span class="offer__upheader">Offer of the month</span>
             <h3 class="offer__header">Phantom Vision Elite Dynamic</h3>
             <p class="offer__text">Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the industry's Lorem Ipsum is simply dummy text of the printing and type setting industry. </p>
-            <span class="offer__price">$500</span>
-            <span class="offer__discount">$1000</span>
-            <time class="offer__time">09<br>...<br>hours</time>
-            <time class="offer__time">09</time>
-            <time class="offer__time">09</time>
+            <span class="offer__price">$500</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="offer__discount"><strike>$1000</strike></span>
+            <div class="offer__wrapper-flex">
+                <div class="offer__timer">
+                <time class="offer__time">09<br>...<br>hours</time>
+                </div>
+                <div class="offer__timer">
+                <time class="offer__time">09<br>...<br>hours</time>
+                </div>
+                <div class="offer__timer">
+                <time class="offer__time">09<br>...<br>hours</time>
+                </div>
+            </div>
             <button class="offer__button button">SHOP NOW</button>
             </div>
             <img class="offer__picture" src="img/Image.jpg" alt="">
@@ -167,7 +177,7 @@
         </section>
     </main>
     <footer>
-    123
+    
     </footer>
 </body>
 </html>
