--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <p data-typing="css"></p>
           <p data-typing="design"></p>
           <p data-typing="animation"></p>
-          <a href="https://www.facebook.com/evgeniydeveloper" target="_blank" data-typing="react"></a>
+          <a href="https://vk.com/graf_andreev" target="_blank" data-typing="vue"></a>
         </div>
       </div>
     </body>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </html>
