--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text css" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon>
       <title>Portfolio</title>
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
-          <p data-typing="i"></p>
-          <p data-typing="frontend"></p>
-          <p data-typing="developer"></p>
-          <p data-typing="with"></p>
-          <p data-typing="javascript"></p>
-          <p data-typing="html"></p>
-          <p data-typing="css"></p>
-          <p data-typing="design"></p>
-          <p data-typing="animation"></p>
-          <a href="https://vk.com/graf_andreev" target="_blank" data-typing="vue"></a>
+        <div class="container data-typing">
+          <p class="i data-typing">i</p>
+          <p class="frontend data-typing">frontend</p>
+          <p class="developer data-typing">developer</p>
+          <p class="with data-typing">with</p>
+          <p class="javascript data-typing">javascript</p>
+          <p class="html data-typing">html</p>
+          <p class="css data-typing">css</p>
+          <p class="design data-typing">design</p>
+          <p class="animation data-typing">animation</p>
+          <p class="vue data-typing"><a href="https://vk.com/graf_andreev" target="_blank" class="vue data-typing">vue.js</a></p>
         </div>
       </div>
     </body>
