Все, кроме футера

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <p class="vue data-typing"><a href="https://vk.com/graf_andreev" target="_blank" class="vue data-typing">vue.js</a></p>
         </div>
       </div>
+    <a href="https://graf-andreev.github.io/site_1">Сайт 1</a>
     </body>
     <script src="js/script.js"></script>
 </html>
