--- a/site_1/index.html
+++ b/site_1/index.html
@@ -121,7 +121,23 @@
                 <span class="items__discount"><strike>$ 200</strike></span>
             </div>
         </section>
-        BLOK
+        <section class="advantages">
+            <div class="advantages__item">
+                <h3 class="advantages__header">Men's&nbsp;running shoes</h3>
+                <p class="advantages__text">Sign up now and get 50% off</p>
+                <button class="advantages__button">Click here</button>
+            </div>
+            <div class="advantages__container">
+                    <img class="items__img" src="/img/1131.jpg" alt="">
+                    <h5 class="items__header">Free Shipping</h5>
+                    <span class="items__price">$ 100</span>
+                    <span class="items__discount"><strike>$ 200</strike></span>
+                </div>
+                <div class="advantages__block">
+                    <h3 class="advantages__blockheader">Run,<br>eat, sleep<br>and repeat</h3>
+                    <button class="advantages__button">Shop now</button>
+                </div>
+        </section>
              <section class="items">
             <div class="items__container">
                 <img class="items__img" src="img/Layer%203.jpg" alt="">
@@ -177,7 +193,50 @@
         </section>
     </main>
     <footer>
-    
+        <section class="footer__menu">
+            <div class="footer__item">
+                    <h5 class="footer__header">Shops</h5>
+                    <a class="footer__text" href="#">New In</a>
+                    <a class="footer__text" href="#">Woman</a>
+                    <a class="footer__text" href="#">Schuhe Shoes</a>
+                    <a class="footer__text" href="#">Bags & Accessories</a>
+                    <a class="footer__text" href="#">Men</a>
+                    <a class="footer__text" href="#">Top Brands</a>
+                    <a class="footer__text" href="#">Sale & Special Offers</a>
+                    <a class="footer__text" href="#">Lookbook</a>
+                </div>
+            <div class="footer__item">
+                    <h5 class="footer__header">Information</h5>
+                    <a class="footer__text" href="#">About us</a>
+                    <a class="footer__text" href="#">Customer Service</a>
+                    <a class="footer__text" href="#">New Collection</a>
+                    <a class="footer__text" href="#">Best Sellers</a>
+                    <a class="footer__text" href="#">Manufacturers</a>
+                    <a class="footer__text" href="#">Privacy policy</a>
+                    <a class="footer__text" href="#">Terms & condition</a>
+                    <a class="footer__text" href="#">Blog</a>
+                </div>
+            <div class="footer__item">
+                    <h5 class="footer__header">Customer service</h5>
+                    <a class="footer__text" href="#">Search Terms</a>
+                    <a class="footer__text" href="#">Advanced Search</a>
+                    <a class="footer__text" href="#">Orders and Returns</a>
+                    <a class="footer__text" href="#">Contact Us</a>
+                    <a class="footer__text" href="#">RSS</a>
+                    <a class="footer__text" href="#">Help & FAQs</a>
+                    <a class="footer__text" href="#">Consultant</a>
+                    <a class="footer__text" href="#">Store Locations</a>
+                 </div>
+        <div class="footer__socials">
+            <h5 class="footer__header">Stay connected</h5>
+        </div>
+        <div class="footer__newsletter">
+                <h5 class="footer__header">Newsletter sign up</h5>
+                <form id="subscribe">
+                <input type="email"  placeholder="Enter your e-mail">
+                <button class="footer__button" type="submit" form="subscribe">Subscribe</button>
+        </div>
+    </section>
     </footer>
 </body>
 </html>
