--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html prefix="og: http://ogp.me/ns#">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon>
-      <title>Portfolio</title>
+
+  <meta charset="utf-8">
+  <title>❤️ FrontEnd</title>
+
+  <meta name="viewport" content="width=device-width">
+
+  <meta property="og:title" content="Archakov Dennis - Archakov Dennis" />
+  <meta property="og:description" content="Awesome site" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://Archakov06.github.io/" />
+  <meta property="og:image" content="http://Archakov06.github.io/images/og-image.jpg" />
+  <meta property="og:site_name" content="Archakov Dennis" />
+
+  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="images/favicon.ico" />
+  <link rel="canonical" href="https://graf_adnreev.github.io/" />
+
 </head>
-<body>
-    <div class="wrapper">
-        <div class="container data-typing">
-          <p class="i data-typing">i</p>
-          <p class="frontend data-typing">frontend</p>
-          <p class="developer data-typing">developer</p>
-          <p class="with data-typing">with</p>
-          <p class="javascript data-typing">javascript</p>
-          <p class="html data-typing">html</p>
-          <p class="css data-typing">css</p>
-          <p class="design data-typing">design</p>
-          <p class="animation data-typing">animation</p>
-          <p class="vue data-typing"><a href="https://vk.com/graf_andreev" target="_blank" class="vue data-typing">vue.js</a></p>
-        </div>
-      </div>
-    <a href="https://graf-andreev.github.io/site_1">Сайт 1</a>
-    </body>
-    <script src="js/script.js"></script>
+<body class="page-index">
+
+<div class="grid">
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+</div>
+
+<div class="main-block">
+	<div class="main-block__bg"></div>
+	<div class="main-block__info">
+		<div class="main-block__info-center">
+			<h1>Maxim Andreev</h1>
+			<div>
+				<p>Hello, World! I’m a frontend developer.</p>
+				<p>I ❤️ <b>JavaScript</b>, <b>Vue.js</b> and <b>UI design</b>.</p>
+				<p><a href="https://github.com/Archakov06">GitHub</a>, <a href="https://archakov.im">Blog</a>, <a href="https://behance.net/archakov1">Behance</a>, <a href="https://moikrug.ru/archakovim">Moikrug</a>, <a href="mailto:hello@archakov.im">E-Mail</a></p>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+</body>
 </html>
+
