--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/test/style.css">
     <title>Test</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
     </form>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/jquery.maskedinput.min.js"></script>
-<script src="/inputmask.js"></script>
-<script src="/script.js"></script>
+<script src="/test/jquery.maskedinput.min.js"></script>
+<script src="/test/inputmask.js"></script>
+<script src="/test/script.js"></script>
 </html>
