--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <form id="myform" name="user">
 <fieldset>
 <textarea id="name" type="text" required maxlength="200" placeholder="Введите имя"></textarea>
-<input id="inn" type="number" placeholder="Введите ИНН 10 или 12 цифр" min="0">
+<input id="inn" type="text" placeholder="Введите ИНН 10 или 12 цифр" min="0">
 <input id="mail" type="text" required placeholder="Введите e-mail" maxlength="50" class="email">
 <input id="telephone" type="phone" required placeholder="Введите телефон" class="phone_mask">
 <input id="data" type="date" required placeholder="Выберите дату">
