--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
 <body>
     <form id="myform" name="user">
 <fieldset>
-<textarea id="name" type="text" required maxlength="200" placeholder="Введите имя"></textarea>
+<textarea id="name" type="number" required maxlength="200" placeholder="Введите имя"></textarea>
 <input id="inn" type="text" placeholder="Введите ИНН 10 или 12 цифр" min="0">
 <input id="mail" type="text" required placeholder="Введите e-mail" maxlength="50" class="email">
 <input id="telephone" type="phone" required placeholder="Введите телефон" class="phone_mask">
