--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <form id="myform">
 <fieldset>
 <textarea name="name" id="name" required maxlength="200" placeholder="Введите имя"></textarea>
-<input name="INN" id="inn" type="number" placeholder="Введите ИНН 10 или 12 цифр" min="0">
+<input name="INN" id="inn" type="number" placeholder="Введите ИНН 10 или 12 цифр" min="10" max="12">
 <input name="email" id="mail" type="text" required placeholder="Введите e-mail" maxlength="50" class="email">
 <input name="telephone" id="telephone" type="phone" required placeholder="Введите телефон" class="phone_mask">
 <input name="date_order" id="data" type="date" required placeholder="Выберите дату">
