--- a/apteka/white.html
+++ b/apteka/white.html
@@ -789,6 +789,7 @@
 		<div class="mobile_rat_product hidden-md hidden-sm hidden-lg">
 							<div class="new_price_prod">
 					Цена при заказе на сайте: <p><span>27</span> руб.</p>
+					<p style="font-weight: bold;"><span style="color: red;">ВНИМАНИЕ!</span><span style="color: black; font-size: 12px;">Указана стоимость товара, действительная только при оформлении заказа на сайте. Цена на данный товар в розничных аптечных точках может отличаться.</span></p>
 				</div>
 					</div>
 		<div class="action_right_product">
