--- a/site_1/index.html
+++ b/site_1/index.html
@@ -129,7 +129,7 @@
                 <button class="advantages__button">Click here</button>
             </div>
             <div class="advantages__container">
-                    <img class="items__img" src="/site_1/img/1131.jpg" alt="">
+                    <img class="items__img" src="/img/1131.jpg" alt="">
                     <h5 class="items__header">Free Shipping</h5>
                     <span class="items__price">$ 100</span>
                     <span class="items__discount"><strike>$ 200</strike></span>
@@ -245,8 +245,14 @@
             </div>
         </div>
     </div>
-       
     </section>
+    <div class="footer__socials footer__socials--mobile">
+        <h5 class="footer__header">Stay connected</h5>
+        <div class="footer__wrapper">
+                <a href="#"><div class="socials-item"><i class="fab fa-facebook-f"></i></div></a>
+                <a href="#"><div class="socials-item"><i class="fab fa-twitter"></i></div></a>
+                <a href="#"><div class="socials-item"><i class="fab fa-google-plus-g"></i></div></a>
+                <a href="#"><div class="socials-item"><i class="fab fa-instagram"></i></div></a>
     </footer>
 </body>
 </html>
