--- a/site_1/index.html
+++ b/site_1/index.html
@@ -255,4 +255,11 @@
                 <a href="#"><div class="socials-item"><i class="fab fa-instagram"></i></div></a>
     </footer>
 </body>
+<script>
+var button = document.querySelector('.top__menubutton');
+var  menu = document.querySelector('.navigatioin__menu');
+button.onclick = function(){
+    menu.style.display = 'block'
+}
+</script> 
 </html>
