--- a/index.html
+++ b/index.html
@@ -7,43 +7,16 @@
 
   <meta name="viewport" content="width=device-width">
 
-  <meta property="og:title" content="Archakov Dennis - Archakov Dennis" />
-  <meta property="og:description" content="Awesome site" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://Archakov06.github.io/" />
-  <meta property="og:image" content="http://Archakov06.github.io/images/og-image.jpg" />
-  <meta property="og:site_name" content="Archakov Dennis" />
 
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="images/favicon.ico" />
   <link rel="canonical" href="https://graf_adnreev.github.io/" />
 
 </head>
-<body class="page-index">
-
-<div class="grid">
-	<div></div>
-	<div></div>
-	<div></div>
-	<div></div>
-	<div></div>
-	<div></div>
-</div>
-
-<div class="main-block">
-	<div class="main-block__bg"></div>
-	<div class="main-block__info">
-		<div class="main-block__info-center">
-			<h1>Maxim Andreev</h1>
-			<div>
-				<p>Hello, World! I’m a frontend developer.</p>
-				<p>I ❤️ <b>JavaScript</b>, <b>Vue.js</b> and <b>UI design</b>.</p>
-				
-			</div>
-		</div>
-	</div>
-</div>
-
+<body>
+	<p>Сайт 1<a href="">https://graf_adnreev.github.io/site_1</a></p>
+	<p>Сайт 2<a href=""></a>https://graf_adnreev.github.io/_site_2</p>
+	<p>Сайт 3<a href=""></a>https://graf_adnreev.github.io/site_3</p>
 
 </body>
 </html>
