--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 </head>
 <body>
-	<p>Сайт 1<a href="">https://graf_adnreev.github.io/site_1</a></p>
-	<p>Сайт 2<a href=""></a>https://graf_adnreev.github.io/_site_2</p>
-	<p>Сайт 3<a href=""></a>https://graf_adnreev.github.io/site_3</p>
+	<a href="https://graf_adnreev.github.io/site_1/">Сайт 1</a>
+	<a href="https://graf_adnreev.github.io/site_2/">Сайт 1</a>
+	<a href="https://graf_adnreev.github.io/site_3/">Сайт 1</a>
 
 </body>
 </html>
