--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 </head>
 <body>
-	<a href="https://graf_adnreev.github.io/site_1/">Сайт 1</a>
-	<a href="https://graf_adnreev.github.io/site_2/">Сайт 1</a>
-	<a href="https://graf_adnreev.github.io/site_3/">Сайт 1</a>
+	<a href="https://graf_adnreev.github.io/site_1/">Сайт 1</a><br>
+	<a href="https://graf_adnreev.github.io/site_2/">Сайт 2</a><br>
+	<a href="https://graf_adnreev.github.io/site_3/">Сайт 3</a><br>
 
 </body>
 </html>
