--- a/site_2/index.html
+++ b/site_2/index.html
@@ -33,7 +33,7 @@
             <div id="wrap">
                   <a href="#" class="block">
                         <div class="product one">
-                              <img src="img/01.png" alt="">
+                              <img src="01.png" alt="">
                               <div class="txt">
                                     <h1>Smythe Wheat</h1>
                                     <p>Price : $40</p>
@@ -45,7 +45,7 @@
                   </a>
                   <a href="#" class="block">
                         <div class="product two">
-                              <img src="img/02.png" alt="">
+                              <img src="02.png" alt="">
                               <div class="txt">
                                     <h1>Smythe Mixology</h1>
                                     <p>Price : $40</p>
@@ -57,7 +57,7 @@
                   </a>
                   <a href="#" class="block">
                         <div class="product three">
-                              <img src="img/03.png" alt="">
+                              <img src="03.png" alt="">
                               <div class="txt">
                                     <h1>Smythe Cherry</h1>
                                     <p>Price : $40</p>
@@ -69,7 +69,7 @@
                   </a>
                   <a href="#" class="block">
                         <div class="product four">
-                              <img src="img/04.png" alt="">
+                              <img src="04.png" alt="">
                               <div class="txt">
                                     <h1>Pepper</h1>
                                     <p>Price : $40</p>
@@ -82,6 +82,102 @@
             </div>
             <a class="close-btn">close</a>
       </div>
-     <script src="/script.js"></script>
+
+      <script type="text/javascript">
+
+      $(document).ready(function() {
+            var docWidth = $('body').width(),
+            $wrap = $('#wrap'),
+            $images = $('#wrap .block'),
+            slidesWidth = $wrap.width();
+
+            $(window).on('resize', function() {
+                  docWidth = $('body').width();
+                  slidesWidth = $wrap.width();
+            })
+
+            $(document).mousemove(function(e) {
+                  var mouseX = e.pageX,
+                  offset = mouseX / docWidth * slidesWidth - mouseX / 2;
+
+                  $images.css({
+                        '-wrbkit-transform' : 'translate3d(' + -offset + 'px,0,0)',
+                        'transform' : 'translate3d(' + -offset + 'px,0,0)'
+                  });
+            });
+      })
+
+      var t1 = new TimelineMax({paused: true});
+
+      TweenMax.from(".logo", 0.5, {
+            opacity: 0,
+            y: 10,
+            delay: 1
+      });
+
+      TweenMax.from(".menu", 0.5, {
+            opacity: 0,
+            y: 10,
+            delay: 1.2
+      });
+
+      TweenMax.from(".title", 3, {
+            opacity: 0,
+            delay: 1.4
+      });
+
+      TweenMax.from(".tagline", 3, {
+            opacity: 0,
+            delay: 1.6
+      });
+
+      TweenMax.from(".morewine", 0.5, {
+            opacity: 0,
+            y: 4,
+            delay: 1.8
+      });
+
+      t1.to(".wines", 1, {
+            autoAlpha: 1
+      });
+
+      t1.from(".one", 0.5, {
+            opacity: 0,
+            y: 20,
+            delay: 0.1
+      },"-=1");
+
+      t1.from(".two", 0.5, {
+            opacity: 0,
+            y: 20,
+            delay: 0.3
+      },"-=1");
+
+      t1.from(".three", 0.5, {
+            opacity: 0,
+            y: 20,
+            delay: 0.5
+      },"-=1");
+
+      t1.from(".four", 0.5, {
+            opacity: 0,
+            y: 20,
+            delay: 0.7
+      },"-=1");
+
+      t1.reverse();
+      $(document).on("click", ".morewine", function() {
+            t1.reversed(!t1.reversed());
+      });
+
+      $(document).on("click", "a", function() {
+            t1.reversed(!t1.reversed());
+      });
+
+      $(document).on("click", ".close-btn a", function() {
+            t1.reversed(!t1.reversed());
+      });
+
+      </script>
 </body>
 </html>
