--- a/site_1/index.html
+++ b/site_1/index.html
@@ -142,7 +142,7 @@
              <section class="items">
             <div class="items__container">
                 <img class="items__img" src="img/Layer%205.jpg" alt="">
-                <h5 class="items__header">Apple Watch</h5>
+                <h5 class="items__header">Free Shoes</h5>
                 <span class="items__price">$ 100</span>
                 <span class="items__discount"><strike>$ 200</strike></span>
             </div>
