--- a/site_1/index.html
+++ b/site_1/index.html
@@ -80,7 +80,7 @@
             <h3 class="offer__header">Phantom Vision Elite Dynamic</h3>
             <p class="offer__text">Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the industry's Lorem Ipsum is simply dummy text of the printing and type setting industry. </p>
             <span class="offer__price">$500</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            <span class="offer__discount"><strike>$1000</strike></span>
+            <span class="offer__discount">$1000</span>
             <div class="offer__wrapper-flex">
                 <div class="offer__timer">
                 <time class="offer__time">09<br>...<br>hours</time>
@@ -101,25 +101,25 @@
                 <img class="items__img" src="img/Layer%207.jpg" alt="">
                 <h5 class="items__header">Stefan Janoski Max</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
             <div class="items__container">
                 <img class="items__img" src="img/Layer%204.jpg" alt="">
                 <h5 class="items__header">Vandal High Supreme</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
             <div class="items__container">
                 <img class="items__img" src="img/Layer%205.jpg" alt="">
                 <h5 class="items__header">New Zoom</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
             <div class="items__container">
                 <img class="items__img" src="img/Layer%206.jpg" alt="">
                 <h5 class="items__header">Fit Shoes</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
         </section>
         <section class="advantages">
@@ -132,7 +132,7 @@
                     <img class="items__img" src="/img/1131.jpg" alt="">
                     <h5 class="items__header">Free Shipping</h5>
                     <span class="items__price">$ 100</span>
-                    <span class="items__discount"><strike>$ 200</strike></span>
+                    <span class="items__discount">$ 200</span>
                 </div>
                 <div class="advantages__block">
                     <h3 class="advantages__blockheader">Run,<br>eat, sleep<br>and repeat</h3>
@@ -144,25 +144,25 @@
                 <img class="items__img" src="img/Layer%205.jpg" alt="">
                 <h5 class="items__header">Free Shoes</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
             <div class="items__container">
                 <img class="items__img" src="img/Layer%207%20copy.jpg" alt="">
                 <h5 class="items__header">Sports Shoes</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
             <div class="items__container">
                 <img class="items__img" src="img/Layer%206.jpg" alt="">
                 <h5 class="items__header">Men Shoes</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
             <div class="items__container">
                 <img class="items__img" src="img/Layer%204%20copy.jpg" alt="">
                 <h5 class="items__header">Girl Shoe</h5>
                 <span class="items__price">$ 100</span>
-                <span class="items__discount"><strike>$ 200</strike></span>
+                <span class="items__discount">$ 200</span>
             </div>
              </section>
         <section class="ancor">
