--- a/parket/index.html
+++ b/parket/index.html
@@ -526,7 +526,7 @@
 			<p class="calc-summary">Итого:</p>
 		</div>
 		<div class="inpit-many flex">
-			<label class="calc-label">Кол-во:<input class="input-pack" type="text">уп</label>
+			<label class="calc-label">Кол-во:<input class="input-pack" type="number">уп</label>
 			<p class="calc-price">5556 руб.</p>
 		</div>
 	
@@ -536,11 +536,11 @@
 </div>
 <div style="display: none;" class="calc-wrapper-1">
 		<div class="prices flex">
-				<p class="calc-text">Цена за уп: 1.596 м2 — 1115 руб </p>
-				<p class="calc-discount">% скидки от обьема </p>
+				<p class="calc-text">Укажите площадь комнаты в м2</p>
+				<p class="calc-discount__2">Итого</p>
 			</div>
 			<div class="inpit-many flex">
-					<label class="calc-label">Кол-во:<input class="input-pack" type="text">уп</label>
+					<label class="calc-label">Площадь м2<input class="input-pack" type="number"></label>
 					<p class="calc-price">5556 руб.</p>
 				</div>
 <a href="javascript:void(0)" class="button btn-buy" data-quantity="1" onclick="return addToCart(this, 'detail', 'В корзине', 'cart', '/basket/', '17104');">
