--- a/parket/index.html
+++ b/parket/index.html
@@ -460,7 +460,7 @@
 												<div class="price">
                                                             <i class="price_info">!</i>
 <div class="tooltip price_info_tooltip">Цена действительна только для интернет-магазина и может отличаться от цен в розничных магазинах.</div> 
-<div class="wrapper1"><span style="color: #333333" class="new">1 300<small> руб./м2</small></span><span class="inshop">В наличии</span></div>
+<div class="wrapper1"><span class="new">1 300<small> руб./м2</small></span><span class="inshop">В наличии</span></div>
 																	<span class="old">2 990<small> руб./м2</small></span>
 <p class="alarm">ВНИМАНИЕ! Минимальный заказ данного товара составляет - 1,96 кв.м.</p>
 <p class="dostavka">Срок доставки: 2 дня</p>
