--- a/jeans/index.html
+++ b/jeans/index.html
@@ -18,7 +18,7 @@
                 <a href="#login_form" class="login button1 fancybox_modal">Вход</a>
                 <div class="loginDescription">для оптовых покупателей</div>
                 <a href="#login_form" class="cart-inhead fancybox_modal">
-                        <span class="value">--/  руб.</span>
+                        <span class="value">--/  рублей</span>
                     
                         <span class="cart_icon"></span>
                          </a>
@@ -36,13 +36,17 @@
     <li class="top-menu__item"><a href="/buy_retail/">Новинки</a></li>
     <li class="top-menu__item"><a href="/akcii/">Акции</a></li>
     <li class="top-menu__item"><a href="/contacts/">Контакты</a></li>
-    <button type="submit" class="search_hd"></button>
+    <button type="submit" class="search_hd"><img src="/img/serach-b.png" alt=""></button>
 </ul>
 </div>  
  </nav>
 <div class="popup_search">
-    <input type="text">
-    <input type="text">
+    <input class="header-search header-search__long" type="search" placeholder="Что вы ищете?">
+    <button type="submit" class="search_hd"><img src="img/button-login.png" alt="" width="106" height="30">Поиск</button>
+    <div class="form-bottom">
+        <input class="header-search header-search__short" type="search" placeholder="Цена от">
+        <input class="header-search header-search__short" type="search" placeholder="Цена до">
+    </div>
 </div>
 
                 
