--- a/jeans/index.html
+++ b/jeans/index.html
@@ -30,54 +30,27 @@
  <nav>
       <div class="wrapper">                   
 <ul class="top-menu">
-    <li class="top-menu__item"><a href="/sjc/">О компании</a>
-        <div class="ins-wrap">
-            <ul class="ins">
-                <li class="first">
-                                <div class="split up"></div><a href="/sjc/advantage/">Преимущества работы с нами для оптовых покупателей</a><div class="split down"></div></li>
-                <li class="">
-                                <div class="split up"></div><a href="/sjc/news/">Новости</a><div class="split down"></div></li>
-                <li class="">
-                                <div class="split up"></div><a href="/contacts/">Контакты</a><div class="split down"></div></li>
-                <li class=" last">
-                                <div class="split up"></div><a href="/sjc/alljeans/">Все о Джинсах и не только...</a><div class="split down"></div></li>
-                <li class="mshadow"></li>
-            </ul>
-        </div>
-    </li>
+    <li class="top-menu__item"><a href="/sjc/">О компании</a></li>
     <li class="top-menu__item"><a href="/brends/">Бренды</a></li>
-    <li class="top-menu__item"><a href="/buy_bulk/">Купить оптом</a>
-        <div class="ins-wrap">
-            <ul class="ins">
-                <li class="first">
-                                <div class="split up"></div><a href="/catalog_bulk/">Товар в наличии на складе</a><div class="split down"></div></li>
-                <li class="">
-                                <div class="split up"></div><a href="/catalog_saleOpt/">Распродажа оптового товара</a><div class="split down"></div></li>
-                <li class="">
-                                <div class="split up"></div><a href="/sjc/terms/">Условия сотрудничества</a><div class="split down"></div></li>
-                <li class="">
-                                <div class="split up"></div><a href="#435119640"><img height="16" border="0" width="16" src="http://web.icq.com/whitepages/online?icq=435119640&img=5"> 435119640</a><div class="split down"></div></li>
-                <li class=" last">
-                                <div class="split up"></div><a href="skype:climber_jeans?chat"><img height="16" width="16" border=0 src="/bitrix/templates/sdk_2014/images/skype.png"> climber_jeans</a><div class="split down"></div></li>
-                <li class="mshadow"></li>
-            </ul>
-        </div>
-    </li>
+    <li class="top-menu__item"><a href="/buy_bulk/">Купить оптом</a></li>
     <li class="top-menu__item"><a href="/buy_retail/">Новинки</a></li>
     <li class="top-menu__item"><a href="/akcii/">Акции</a></li>
     <li class="top-menu__item"><a href="/contacts/">Контакты</a></li>
+    <div>
     <button type="submit" class="search_hd"><img src="/img/serach-b.png" alt=""></button>
+    <div class="popup_search">
+        <input class="header-search header-search__long" type="search" placeholder="Что вы ищете?">
+        <button type="submit" class="search_hd"><img src="img/button-login.png" alt="" width="106" height="30">Поиск</button>
+        <div class="form-bottom">
+            <input class="header-search header-search__short" type="search" placeholder="Цена от"> 
+            <input class="header-search header-search__short" type="search" placeholder="Цена до">
+        </div>
+    </div>
+</div>
 </ul>
 </div>  
  </nav>
-<div class="popup_search">
-    <input class="header-search header-search__long" type="search" placeholder="Что вы ищете?">
-    <button type="submit" class="search_hd"><img src="img/button-login.png" alt="" width="106" height="30">Поиск</button>
-    <div class="form-bottom">
-        <input class="header-search header-search__short" type="search" placeholder="Цена от"> 
-        <input class="header-search header-search__short" type="search" placeholder="Цена до">
-    </div>
-</div>
+
 
                 
 
