--- a/jeans/index.html
+++ b/jeans/index.html
@@ -36,11 +36,13 @@
     <li class="top-menu__item"><a href="/buy_retail/">Новинки</a></li>
     <li class="top-menu__item"><a href="/akcii/">Акции</a></li>
     <li class="top-menu__item"><a href="/contacts/">Контакты</a></li>
-    <div>
-    <button onclick="toggle()" type="submit" class="search_hd search_button"><img src="/img/serach-b.png" alt=""></button>
+    <div class="search_wrap">
+    <button onclick="toggle()" type="submit" class="search_hd search_button"><img src="img/serach-b.png" alt=""></button>
     <div class="popup_search">
+       <div class="search_wrap">
         <input class="header-search header-search__long" type="search" placeholder="Что вы ищете?">
-        <button type="submit" class="search_hd">Поиск</button>
+        <div><a class="search__button" href="">Поиск</a></div>
+        </div>
         <div class="form-bottom">
             <input class="header-search header-search__short" type="search" placeholder="Цена от"> 
             <input class="header-search header-search__short" type="search" placeholder="Цена до">
