--- a/jeans/index.html
+++ b/jeans/index.html
@@ -30,9 +30,46 @@
  <nav>
       <div class="wrapper">                   
 <ul class="top-menu">
-    <li class="top-menu__item"><a href="/sjc/">О компании</a></li>
+    <li class="top-menu__item"><a href="/sjc/">О компании</a>
+
+<!-- start -->
+
+        <ul class="ins">
+            <li class="first">
+                            <a href="/sjc/advantage/">Преимущества работы с нами для оптовых покупателей</a></li>
+            <li class="">
+                            <a href="/sjc/news/">Новости</a></li>
+            <li class="">
+                            <a href="/contacts/">Контакты</a></li>
+            <li class=" last">
+                            <a href="/sjc/alljeans/">Все о Джинсах и не только...</a></li>
+            <li class="mshadow"></li>
+        </ul></li>
+
+        <!-- end -->
+
     <li class="top-menu__item"><a href="/brends/">Бренды</a></li>
-    <li class="top-menu__item"><a href="/buy_bulk/">Купить оптом</a></li>
+    <li class="top-menu__item"><a href="/buy_bulk/">Купить оптом</a>
+
+<!-- start -->
+
+        <ul class="ins">
+            <li class="first">
+                            <a href="/catalog_bulk/">Товар в наличии на складе</a></li>
+            <li class="">
+                            <a href="/catalog_saleOpt/">Распродажа оптового товара</a></li>
+            <li class="">
+                           <a href="/sjc/terms/">Условия сотрудничества</a></li>
+            <li class="">
+                            <a href="#435119640"><img height="16" width="16" src="http://web.icq.com/whitepages/online?icq=435119640&img=5"> 435119640</a></li>
+            <li class=" last">
+                            <a href="skype:climber_jeans?chat"><img height="16" width="16" src="http://jeanscom.ru/bitrix/templates/sdk_2014/images/skype.png"> climber_jeans</a></li>
+            <li class="mshadow"></li>
+        </ul></li>
+
+     <!-- end -->
+
+
     <li class="top-menu__item"><a href="/buy_retail/">Новинки</a></li>
     <li class="top-menu__item"><a href="/akcii/">Акции</a></li>
     <li class="top-menu__item"><a href="/contacts/">Контакты</a></li>
