--- a/jeans/index.html
+++ b/jeans/index.html
@@ -78,7 +78,7 @@
     <div class="popup_search">
        <div class="search_wrap">
         <input class="header-search header-search__long" type="search" placeholder="Что вы ищете?">
-        <div><a class="search__button" href="">Поиск</a></div>
+        <div><button type="submit" class="search_hd search__button ">Поиск</button></div>
         </div>
         <div class="form-bottom">
             <input class="header-search header-search__short" type="search" placeholder="Цена от"> 
