--- a/jeans/index.html
+++ b/jeans/index.html
@@ -7,7 +7,7 @@
 </head>
 <header>
     <section class="top__header">
-      <img class="logo" src="img/logo.png" alt="" width="160" height="86">
+      <a href="http://jeanscom.ru"><img class="logo" src="img/logo.png" alt="" width="160" height="86"></a> 
       <div>
       <img class="text-logo" src="img/logo-text.png" alt="" width="608" height="33"><br>
       <span class="phone phone-1">8-800 250 32 36</span>
@@ -15,7 +15,7 @@
    </div>
    <div class="form-wrapper">
         <div class="loginButtonWrap">
-                <a href="#login_form" class="login button1 fancybox_modal">Вход</a>
+                <a href="#login_form" class="login button2 fancybox_modal">Вход</a>
                 <div class="loginDescription">для оптовых покупателей</div>
                 <a href="#login_form" class="cart-inhead fancybox_modal">
                         <span class="value">--/  рублей</span>
