--- a/jeans/index.html
+++ b/jeans/index.html
@@ -27,7 +27,7 @@
 
     </section>
 </header>
- <nav>
+ <div class="header_nav">
       <div class="wrapper">                   
 <ul class="top-menu">
     <li class="top-menu__item"><a href="/sjc/">О компании</a>
@@ -88,7 +88,7 @@
 </div>
 </ul>
 </div>  
- </nav>
+</div>
 <body>
     
 </body>
@@ -104,3 +104,4 @@
         }
     </style>
 </html>
+
