--- a/english_school/index.html
+++ b/english_school/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="fonts/adineuePROKZ-Black.ttf" rel="stylesheet">
     <title>Level Eleven</title>
 </head>
 <header>
@@ -22,10 +23,183 @@
     <img src="img/vk.png" alt="">
 </div>
 </div>
-<div class="adress">Адреса</div>
+<div class="adress">Адреса
+    <img src="img/address.png" width="43" height="43" alt="">
+</div>
 </header>
+<nav class="bg-orange__grad">
+<div class="wrapper-content ">
+    <ul class="main-navigation">
+        <li class="nav-item bg-orange"><a href="">Курсы</a></li>
+        <li class="nav-item bg-orange"><a href="">Преподаватели</a></li>
+        <li class="nav-item bg-orange"><a href="">Почему мы</a></li>
+        <li class="nav-item bg-orange"><a href="">Этапы обучения</a></li>
+        <li class="nav-item bg-orange"><a href="">Услуги</a></li>
+        <li class="nav-item bg-orange"><a href="">Преимущества</a></li>
+        <li class="nav-item bg-orange"><a href="">Контакты</a></li>
+        <li class="nav-item bg-white"><a href="">Отзывы</a></li>
+        <li class="nav-item bg-white"><a href="">Тест</a></li>
+        <li class="nav-item bg-white"><a href="">Акции</a></li>
+    </ul> 
+</div> 
+</nav>
 <body>
-    
+    <section class="main-banner">
+        <h1>Your <span>new</span> level</h1>
+        <button class="main-button">Узнать больше</button>
+    </section>
+    <section class="timer">
+            <p>До конца акции</p>
+<h3>35% скидка <span>на обучение</span></h3>
+<div>14</div>
+<span>Дни</span>
+<div>45</div>
+<span>Часы</span>
+<div>04</div>
+<span>Минуты</span>
+<div>56</div>
+<span>Секунды</span>
+<button>Хочу узнать свой уровень</button>
+</section>
+<section class="levels">
+    <div class="wrapper-content jc-flex">
+    <div class="card">
+        <div class="card-header bg-orange">
+<p>Pre -schoolers <br>(3-6 лет)</p>
+        </div>
+        <div class="card-main">
+            <p>Увлекательный  учебный курс для дошкольников разработан с акцентом на формировании 
+                умений в чтении, письме и счёте на английском языке у Обучение говорению строится
+                 на основе сюжетных историй, сценок и песен, делающих процесс обучения английскому 
+                языку живым и интересным. </p>
+                <button>Подробнее</button>
+        </div>
+    </div>
+    <div class="card">
+            <div class="card-header bg-orange">
+                <p>Primary <br> (7-9 лет )</p>
+            </div>
+            <div class="card-main">
+                <p>Уникальное сочетание лучших традиций академического подхода к обучению 
+                    и современных коммуникативных технологий позволит с самых первых шагов 
+                    в изучении английского языка достичь наилучших результатов. Дополнительные 
+                    задания onlinec Pupil’sPracticeKit с видеосюжетами и интерактивными заданиями 
+                    превратит выполнение домашнего задания в увлекательное занятие.</p>
+                    <button>Подробнее</button>
+            </div>
+        </div>
+        <div class="card">
+                <div class="card-header bg-orange">
+                    <p>Secondary <br>(10-12 лет)</p>
+                </div>
+                <div class="card-main">
+                    <p>Вдохновляющий курс, ориентированный на мотивацию и развитие  учащихся младшего подросткового возраста. 
+                        Курс отражает современные тенденции и требования к обучению практическому владению английским языком в повседневном общении и включает 
+                            в себя аутентичные видеоролики BBC и интерактивные задания </p>
+                            <button>Подробнее</button>
+                </div>
+            </div>
+    </div>
+</section>
+<section class="levels-2">
+        <div class="wrapper-content jc-flex">
+        <div class="card card-next">
+        <div class="card-header bg-orange">
+         <p>Teens(13-17 лет)</p>
+        </div>
+        <div class="card-main">
+          <p>Многоуровневый курс английского языка, направленный не только на 
+              освоение «общего» английского, но и на успешную подготовку учащихся к 
+              школьным и университетским экзаменам.</p>
+     <button>Подробнее</button>
+     </div></div>
+         <div class="card card-next">
+       <div class="card-header bg-orange">
+        <p>Adults (18 +)</p>
+         </div>
+        <div class="card-main">
+        <p>Это общий курс английского языка для взрослых который сочетает в материалы
+             от издательства Cambridge University Press с проверенной оценкой от экспертов
+              Cambridge Assessment English. </p>
+        <button>Подробнее</button>
+        </div>
+</section>
+<section class="test bg-orange">
+<h3>Не знаешь уровень своего английского?</h3>
+<p>Пройди тест из 11 вопросов</p>
+<button>Пройти тест</button>
+</section>
+<section class="teachers">
+        <div class="wrapper-content">
+            <h3>Наши преподаватели</h3>
+<div class="teacher-item">
+    <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="teacher-name">Имя Фамилия</div>
+    <button>Подробнее</button>
+</div>
+<div class="teacher-item">
+        <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <div class="teacher-name">Имя Фамилия</div>
+        <button>Подробнее</button>
+    </div>
+    <div class="teacher-item">
+    <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="teacher-name">Имя Фамилия</div>
+    <button>Подробнее</button>
+</div>
+<div class="teacher-item">
+        <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <div class="teacher-name">Имя Фамилия</div>
+        <button>Подробнее</button>
+    </div>
+<div class="teacher-item">
+    <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="teacher-name">Имя Фамилия</div>
+    <button>Подробнее</button>
+</div>
+<div class="teacher-item">
+        <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <div class="teacher-name">Имя Фамилия</div>
+        <button>Подробнее</button>
+    </div>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+    Excepteur sint </p> 
+</div>
+</section>
+<section class="why-we">
+    <h2>Почему мы?</h2>
+<div class="why">
+    <img src="img/why1.jpg" width="379" height="249" alt="">
+    <p>Наши центры соответствуют требованиям Министрества образования, 
+        что подтверждает Лицензия на осуществленипе образовательной деятельности</p>
+</div>
+<div class="why">
+     <img src="img/why2.jpg" width="379" height="249" alt="">
+        <p>Квалифицированный академический персонал, в большинстве своем подтверждают уровень 
+            владения языком, а так же методиками преподавания на международном уровне!</p>
+    </div>
+<div class="why">
+        <img src="img/why3.jpg" width="379" height="249" alt="">
+    <p>Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
+        подтверждает возможность компании участвовать в тендерах и гос. заказах</p>
+</div>
+<div class="why">
+        <img src="img/why4.jpg" width="379" height="249" alt="">
+        <p>Подготовка, а так же сдача международных экзаменов наших студентов в 100% случаях!</p>
+    </div>
+<div class="why">
+        <img src="img/why5.jpg" width="379" height="249" alt="">
+    <p>Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
+        подтверждает возможность компании участвовать в тендерах и гос. заказах</p>
+</div>
+<div class="why">
+        <img src="img/why6.jpg" width="379" height="249" alt="">
+        <p>Практика подготовки к общероссийским экзаменам ОГЭ и ЕГЭ на высокий балл!</p>
+    </div>
+</section>
 </body>
 <footer>
 
